--- a/stack.yaml
+++ b/stack.yaml
@@ -1,11 +1,14 @@
-resolver: lts-11.6
+resolver: nightly-2019-11-07
 packages:
 - Cabal/
 - cabal-install/
 - cabal-testsuite/
 extra-deps:
-  - resolv-0.1.1.1
-  - QuickCheck-2.11.3
+- ./hackage-security/hackage-security
+- lukko-0.1
+- HTTP-4000.3.14
+- resolv-0.1.1.3
+- QuickCheck-2.11.3
 nix:
   packages:
   - autoconf
